--- a/build.gradle
+++ b/build.gradle
@@ -28,24 +28,13 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
 
-    // 보안
-    implementation("org.springframework.security:spring-security-web:5.8.13")
-    implementation("org.springframework.security:spring-security-config:5.8.13")
-    implementation("org.springframework.security:spring-security-core:5.8.13")
-    implementation("org.springframework.security:spring-security-taglibs:5.8.13")
-
-    //    Query DSL (spring boot 3.x 이상)
+    // QueryDSL
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
-    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
-    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
     // SMS
     implementation 'net.nurigo:sdk:4.3.0'
@@ -53,13 +42,25 @@ dependencies {
     // 암호화
     implementation 'org.jasypt:jasypt:1.9.3'
 
-    // jwt
+    // JWT
     implementation("io.jsonwebtoken:jjwt-api:0.11.5")
     runtimeOnly("io.jsonwebtoken:jjwt-impl:0.11.5")
     implementation("io.jsonwebtoken:jjwt-jackson:0.11.5")
 
-    // json데이터를 받아오기 위한 카카오용 GSON
-    implementation 'com.google.code.gson:gson:2.8.6'
+    // 최신 GSON 버전
+    implementation 'com.google.code.gson:gson:2.10.1'
+
+    // JPA 관련 의존성 추가
+    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+    implementation 'org.hibernate.orm:hibernate-core:6.0.0.Final'
+
+    // 테스트
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // Optional: Hibernate JPA Model Generator (QueryDSL 관련)
+    annotationProcessor 'org.hibernate:hibernate-jpamodelgen:6.0.0.Final'
 }
 
 tasks.named('test') {
