--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://bbaek2.synology.me:3306/example
+    url: jdbc:mysql://localhost:3306/FIN_MENTOR
     username: root
-    password: 1234
+    password: gus3129040
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
