--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/FIN_MENTOR
+    url: jdbc:mysql://mysql-database.cpqygy6u09kv.ap-northeast-2.rds.amazonaws.com:3306/FIN_MENTOR
     username: root
-    password: gus3129040
+    password: gql09so0WOXyqMFj9EJa
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     show-sql: true
@@ -34,3 +34,7 @@ naver:
 coolsms:
   api-key: NCSZGBYEUUF0QADU
   api-secret: PDYDAPMULLX63CPDEVQWTUGITRV4NQAN
+
+jasypt:
+  encryptor:
+    password: yUZp9wkybdGwzOlUW8Dh8a8g9G2eka0z6vXVCMhCCc2aw1qV8s
