--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,5 @@
 name: CI/CD Pipeline
 
-# 트리거: main 브랜치에 push될 때 또는 pull request가 있을 때 작동
 on:
   push:
     branches:
@@ -14,58 +13,49 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. 코드 체크아웃
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # 2. JDK 17 설치
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # 3. Docker 버전 확인 (디버깅용)
       - name: Check Docker version
         run: docker --version
 
-      # 4. Docker 로그인
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 5. Gradle 캐시 설정
       - name: Cache Gradle packages
         uses: actions/cache@v2
         with:
           path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
-            ${{ runner.os }}-gradle-
+            gradle-${{ runner.os }}-
 
-      # 6. Gradle Wrapper 실행 권한 추가
       - name: Add execute permission to Gradle wrapper
         run: chmod +x ./gradlew
 
-      # 7. 애플리케이션 빌드 (Gradle)
       - name: Build application with Gradle
         run: ./gradlew build -x test
 
-      # 8. Docker 이미지 빌드
       - name: Build Docker image
         run: docker build . -t ${{ secrets.DOCKER_USERNAME }}/backend:latest
 
-      # 9. Docker 이미지 푸시
       - name: Push Docker image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/backend:latest
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
+
     steps:
-      # 1. EC2 서버에 SSH로 접근하여 Docker 컨테이너 업데이트
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.8
         with:
