--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: Spring Boot Docker CI/CD Pipeline
 
 on:
   push:
@@ -13,11 +13,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1. 코드 체크아웃
       - name: Checkout code
         uses: actions/checkout@v2
-        with:
-          # 파일을 Unix 형식으로 체크아웃 (CRLF -> LF)
-          eol: lf
 
       # 2. JDK 17 설치
       - name: Set up JDK 17
@@ -26,11 +24,18 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      # 3. Gradle Wrapper 파일에 실행 권한 부여
-      - name: Add execute permission to Gradle wrapper
-        run: chmod +x ./gradlew
+      # 3. Docker 버전 확인 (디버깅용)
+      - name: Check Docker version
+        run: docker --version
 
-      # 4. Gradle 캐시 설정
+      # 4. Docker Hub 로그인
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # 5. Gradle 캐시 설정
       - name: Cache Gradle packages
         uses: actions/cache@v2
         with:
@@ -39,20 +44,16 @@ jobs:
           restore-keys: |
             gradle-${{ runner.os }}-
 
-      # 5. 애플리케이션 빌드 (Gradle)
+      # 6. Gradle Wrapper 형식 변경 및 실행 권한 추가
+      - name: Convert Gradle wrapper to Unix format
+        run: dos2unix ./gradlew
+
+      - name: Add execute permission to Gradle wrapper
+        run: chmod +x ./gradlew
+
+      # 7. 애플리케이션 빌드 (Gradle)
       - name: Build application with Gradle
         run: ./gradlew build -x test
-
-      # 6. Docker 버전 확인
-      - name: Check Docker version
-        run: docker --version
-
-      # 7. Docker 로그인
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
 
       # 8. Docker 이미지 빌드
       - name: Build Docker image
@@ -65,8 +66,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-
     steps:
+      # 1. EC2 서버에 SSH로 접근하여 Docker 컨테이너 업데이트
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.8
         with:
@@ -74,10 +75,9 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           script: |
-            echo "Pulling the latest Docker image..."
             docker pull ${{ secrets.DOCKER_USERNAME }}/backend:latest
-            echo "Stopping the existing container if running..."
+
             docker stop backend || true
             docker rm backend || true
-            echo "Starting a new container..."
+
             docker run -d -p 8080:8080 --name backend ${{ secrets.DOCKER_USERNAME }}/backend:latest
